top_bar: prevent the search group from growing too much
it was making the h1 split in two lines and the profile picture shrink horizontally
with screen width between 1000px and 1200px

--- a/app/modules/general/scss/_top_bar.scss
+++ b/app/modules/general/scss/_top_bar.scss
@@ -42,7 +42,7 @@ nav#top-bar{
     }
   }
   #searchGroup{
-    flex: 1 0 auto;
+    flex: 1 0 0;
     // 7 = max number of search section on a row
     max-width: 7 * $search-section-width;
     margin: 0 auto;
